# gakumas-share

./: README.md
backend/: .env.example  pyproject.toml  railway.json
backend/app/: config.py  database.py  main.py  oauth.py  supertokens.py
backend/app/models/: user.py
backend/app/repositories/: __init__.py  user_repository.py
backend/app/routers/: __init__.py  auth.py  health.py  root.py
backend/app/tests/: test_auth_routes.py  test_main.py  test_user_repository.py
docs/: AUTHENTICATION.md  DEPLOYMENT.md  DEVELOPMENT.md  MVP-roadmap.md  MVP.md  gakumas-memory.md
frontend/: .env.example  README.md  package-lock.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/layout/: AppLayout.tsx  Header.tsx
frontend/src/hooks/: useSession.ts
frontend/src/pages/: AuthErrorPage.tsx  AuthSuccessPage.tsx  HomePage.tsx  MyMemoriesPage.tsx  NotFoundPage.tsx
